# nfclogin

./: .gitignore  README.md
NFCLoginApp/: NFCLoginApp.sln
NFCLoginApp/NFCLoginApp/NFCLoginApp/: Device.cs  DeviceDB.cs  Globals.cs  Interfaces.cs  NFCLoginApp.csproj
NFCLoginApp/NFCLoginApp/NFCLoginApp.Android/: CryptoServices.cs  FPAuth.cs  HCEService.cs  MainActivity.cs  NFCLoginApp.Android.csproj  RSAUtils.cs
NFCLoginApp/NFCLoginApp/NFCLoginApp.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
NFCLoginApp/NFCLoginApp/NFCLoginApp.Android/Resources/: Resource.designer.cs
NFCLoginApp/NFCLoginApp/NFCLoginApp.Android/Resources/values/: Strings.xml
NFCLoginApp/NFCLoginApp/NFCLoginApp.Android/Resources/xml/: aid_list.xml
NFCLoginApp/NFCLoginApp/NFCLoginApp/Pages/: AddDevice.xaml  AddDevice.xaml.cs  App.xaml  App.xaml.cs  DeviceDetail.xaml  DeviceDetail.xaml.cs  DeviceList.xaml  DeviceList.xaml.cs
arduino_comms/: apdu.h  arduino_comms.ino  deploy.sh  pamcomm.cpp  pamcomm.h  utils.cpp  utils.h
linux-pam/: CMakeLists.txt
linux-pam/include/: Comms.hpp  Config.hpp  CryptoLoginManager.hpp  OSSLUtils.hpp  base64.hpp  cmake_version.h.in  projectVersion.h
linux-pam/src/: Comms.cpp  Config.cpp  CryptoLoginManager.cpp  OSSLUtils.cpp  base64.cpp  pam_nfc.cpp
linux-userconf/: CMakeLists.txt
linux-userconf/include/: UserConf.hpp
linux-userconf/src/: UserConf.cpp  nfc_userconf.cpp
